k8s_first_try/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-first-try-service
spec:
  selector:
    app: k8s-first-try
  ports:
  - name:  web
    port:  8000
    targetPort: 8000
    protocol: TCP
  type: NodePort
