k8s_first_try/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-first-try-ingress
  annotations:
    nginx.kubernetes.io/ingress.class: nginx
    nginx.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /health
          pathType: Exact
          backend:
            service:
              name: k8s-first-try-service
              port: 
                number: 8000
        - path: /otusapp(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: k8s-first-try-service
              port: 
                number: 8000
